--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "ical-generator": "^9.0.0",
     "lucide-react": "^0.513.0",
+    "moment-timezone": "^0.6.0",
     "next": "15.3.3",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "timezones-ical-library": "^1.10.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
