--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^12.0.0",
     "ical-generator": "^9.0.0",
     "lucide-react": "^0.513.0",
     "moment-timezone": "^0.6.0",
